# pip_installer_test

./: .gitignore  1setup.py  2setup.py  MANIFEST.in  Makefile  dummy_program.pyx  dummy_test.py  pyproject.toml  setup.py  setup1.py
dummy_program/: setup.py
dummy_program/src/: dummyProgram.cpp  dummyProgram.hpp
pip_installer_test/: Makefile  dummy_program.pyi  dummy_program.pyx
