[tool.poetry]
name = "pip_installer_test"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Simonov <yevgeniy.simonov@theugroup.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Cython = "^0.29.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "numpy>=1.19.0", "Cython>=0.29.30"]
build-backend = "setuptools.build_meta"
