[tool.poetry]
name = "pip_installer_test"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Simonov <yevgeniy.simonov@theugroup.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Cython = "^0.29.30"
vvv = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"
